--- a/SiraUI/SiraUI.csproj
+++ b/SiraUI/SiraUI.csproj
@@ -104,6 +104,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <SourceRoot Include="$(MSBuildThisFileDirectory)/"/>
+    </ItemGroup>
+    
+    <ItemGroup>
         <None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
         <None Include="Directory.Build.targets" Condition="Exists('Directory.Build.targets')" />
         <None Include="SiraUI.csproj.user" Condition="Exists('SiraUI.csproj.user')" />
