--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,16 +1,16 @@
-name: Build and Deploy SiraUI
+name: Build SiraUI for Development
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
     paths: 
       - 'SiraUI/**'
-      - '.github/workflows/main.yml'
+      - '.github/workflows/develop.yml'
   pull_request:
-    branches: [ main ]
+    branches: [ develop ]
     paths:  
       - 'SiraUI/**'
-      - '.github/workflows/main.yml'
+      - '.github/workflows/develop.yml'
 
 jobs:
   build:
@@ -31,22 +31,9 @@ jobs:
       id: Build
       env: 
         FrameworkPathOverride: /usr/lib/mono/4.7.2-api
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Debug
     - name: Echo Filename
       run: echo "$BUILDTEXT ($ASSEMBLYNAME)"
       env:
         BUILDTEXT: Filename=${{ steps.Build.outputs.filename }}
         ASSEMBLYNAME: AssemblyName=${{ steps.Build.outputs.assemblyname }}
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: ${{ steps.Build.outputs.filename }}
-        path: ./SiraUI/bin/Release/Final
-    - name: CopyPDB
-      working-directory: ./SiraUI/bin/Release
-      run: cp ${{ steps.Build.outputs.assemblyname }}.pdb Final/Plugins/${{ steps.Build.outputs.assemblyname }}.pdb
-    - name: Upload Artifact With PDB
-      uses: actions/upload-artifact@v1
-      with:
-        name: ${{ steps.Build.outputs.filename }}_WithPDB
-        path: ./SiraUI/bin/Release/Final
